syntax = "proto3";

import "client_id.proto";

package prvs;
option go_package=".;prvs";

// Service -> post message 修改网关连接者角色等级
message RequestGatewayAlterRule {
    network.ClientID target = 1;  // 目标(可为空)  
    int32            Rule   = 2;
}
